retrieveUnpackaged/objects/Award_Reporting__c.object
<CustomObject>
    <fields>
        <fullName>Receiving_Education_Services__c</fullName>
        <label>Receiving Education Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_Environmental_Stewardship_svcs__c</fullName>
        <label>Receiving Environmental Stewardship svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_Healthy_Futures_Services__c</fullName>
        <label>Receiving Healthy Futures Services</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Receiving_Veteran_Military_Family_svcs__c</fullName>
        <label>Receiving Veteran/Military Family svcs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipient_share_of_exp_Cumulative__c</fullName>
        <label>Recipient share of exp-Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recipient_share_of_exp_This_Period__c</fullName>
        <label>Recipient share of exp-This Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recipient_share_of_expenditures__c</fullName>
        <label>Recipient share of expenditures-Previous</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Recshare_of_exp_incl_funds_oth_fed_fund__c</fullName>
        <label>Recshare of exp. incl funds oth fed fund</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Remaining_recipient_share_to_be_provided__c</fullName>
        <formula>Total_Recipient_share_required__c   -  Recipient_share_of_expenditures__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining recipient share to be provided</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <inlineHelpText>Attach any explanations deemed necessary or information required by Federal sponsoring agency in compliance with governing legislation</inlineHelpText>
        <label>Remarks</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ReportId__c</fullName>
        <label>ReportId</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Report_Name1__c</fullName>
        <label>Report Name1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Name__c</fullName>
        <defaultValue>$RecordType.Name</defaultValue>
        <label>Report Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report_Type__c</fullName>
        <label>Report Type</label>
        <picklist>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Semi-Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reporting_End_Date__c</fullName>
        <label>Reporting End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reporting_Period__c</fullName>
        <formula>TEXT(Action_Reports__r.Reporting_Period_Start_Date__c) + &apos;-&apos; + TEXT(Action_Reports__r.Reporting_Period_End_Date__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Reporting Period</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Periods__c</fullName>
        <label>Reporting Period</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Reporting_Start_Date__c</fullName>
        <label>Reporting Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resubmission_Date_Received__c</fullName>
        <description>This date will be filled once FFR has been resubmitted by Grantee</description>
        <label>Resubmission Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resubmission_Due_Date__c</fullName>
        <description>This date will be filled if FFR needs to be sent back to Grantee for rework.</description>
        <label>Resubmission Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Serve_11_or_more_weekly__c</fullName>
        <label>Serve 11 or more weekly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serve_1_client_weekly__c</fullName>
        <label>Serve 1 client weekly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serve_2_clients_weekly__c</fullName>
        <label>Serve 2 clients weekly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serve_3_5_clients_weekly__c</fullName>
        <label>Serve 3 - 5 clients weekly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Serve_6_10_clients_weekly__c</fullName>
        <label>Serve 6 - 10 clients weekly</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Disabled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reviewed and Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Returned for Re-work</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Re-submitted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Submission_Due_Date__c</fullName>
        <formula>Grant_End_Date__c + 90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submission Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Submitted_By__c</fullName>
        <label>Submitted By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_IN__c</fullName>
        <label>Substance Abuse(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_NIH__c</fullName>
        <label>Substance Abuse(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Substance_Abuse_V__c</fullName>
        <label>Substance Abuse(V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teen_Pregnancy_Teen_Parenting_IN__c</fullName>
        <label>Teen Pregnancy/Teen Parenting(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teen_Pregnancy_Teen_Parenting_NIH__c</fullName>
        <label>Teen Pregnancy/Teen Parenting(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Teen_Pregnancy_Teen_Parenting_V__c</fullName>
        <label>Teen Pregnancy/Teen Parenting(V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terminally_Ill_IN__c</fullName>
        <label>Terminally Ill(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terminally_Ill_NIH__c</fullName>
        <label>Terminally Ill(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Terminally_Ill_V__c</fullName>
        <label>Terminally Ill(V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timely_Submission__c</fullName>
        <label>Timely Submission</label>
        <picklist>
            <picklistValues>
                <fullName>On time</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Total_Fed_Funds_authorized_Cumulative__c</fullName>
        <label>Total Fed Funds authorized-Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Fed_Funds_authorized_This_Period__c</fullName>
        <label>Total Fed Funds authorized-This Period</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Federal_Funds_authorized__c</fullName>
        <label>Total Federal Funds authorized-Previous</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Number_of_Non_Stipend_Volunteers__c</fullName>
        <label>Total Number of Non-Stipend Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Recipient_share_req_Cumulative__c</fullName>
        <label>Total Recipient share req-Cumulative</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Recipient_share_req_ThisPeriod__c</fullName>
        <label>Total Recipient share req-ThisPeriod</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Recipient_share_required__c</fullName>
        <label>Total Recipient share required-Previous</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_federal_program_income_earned_no__c</fullName>
        <label>Total federal program income earned (no</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_federal_share__c</fullName>
        <formula>Total_Federal_Funds_authorized__c + Federal_Share_of_unliquidated_obligation__c  +  Federal_Share_of_expenditures__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total federal share</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_number_of_Immigrants_served__c</fullName>
        <label>Total number of Immigrants served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_Volunteers__c</fullName>
        <label>Total number of Volunteers</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_Volunteers_non_federally__c</fullName>
        <label>Total number of Volunteers non-federally</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_Volunteers_serving_in_in__c</fullName>
        <label>Total number of Volunteers serving in in</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_active_Military_members__c</fullName>
        <label>Total number of active Military members</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_active_Military_served__c</fullName>
        <label>Total number of active Military served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_children_mentored__c</fullName>
        <label>Total number of children mentored</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_children_of_National_Gua__c</fullName>
        <label>Total number of children of National Gua</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_children_of_active_milit__c</fullName>
        <label>Total number of children of active milit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_children_of_prisoners_se__c</fullName>
        <label>Total number of children of prisoners se</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_children_youth_served__c</fullName>
        <label>Total number of children/youth served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_clients_served__c</fullName>
        <label>Total number of clients served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_disaster_services_V__c</fullName>
        <label>Total number of disaster services (V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_disaster_services_statio__c</fullName>
        <label>Total number of disaster services (S)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_faith_based_Stations_V__c</fullName>
        <label>Total number of faith-based Stations / V</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_family_members_of_active__c</fullName>
        <label>Total number of family members of active</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_hours_served_federally_f__c</fullName>
        <label>Total number of hours served federally f</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_hours_served_non_federal__c</fullName>
        <label>Total number of hours served non-federal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_seniors_on_waiting_list__c</fullName>
        <label>Total number of seniors on waiting list</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_veterans_served__c</fullName>
        <label>Total number of veterans served</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_number_of_volunteers_with_family_m__c</fullName>
        <label>Total number of volunteers with family m</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_of_faith_based_Volunteer__c</fullName>
        <label>Total # of faith-based Volunteer</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transportation_problems__c</fullName>
        <label>Transportation problems</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unexpended_program_income__c</fullName>
        <formula>Total_federal_program_income_earned_no__c + Program_income_expended_in_accordance_wi__c  +  Program_income_expended_in_accordance_w__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unexpended program income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unobligated_balance_of_federal_funds__c</fullName>
        <formula>Total_Federal_Funds_authorized__c  -  Federal_Share_of_expenditures__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unobligated balance of federal funds</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Unobligated_funds__c</fullName>
        <label>Unobligated funds</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On target</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Use_on_other_federal_activities__c</fullName>
        <inlineHelpText>Does the grantee request the use of the equipment on other federally supported activities?</inlineHelpText>
        <label>Use on other federal activities?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Veterans_family_members_that_received_a__c</fullName>
        <label>Veterans’ family members that received a</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Veterans_that_received_assistance__c</fullName>
        <label>Veterans that received assistance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vets_military_fam_mbrs_providing_service__c</fullName>
        <inlineHelpText>Number of veterans &amp; military family members engaged in providing services</inlineHelpText>
        <label>Vets/military fam mbrs providing service</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visually_Impaired_IN__c</fullName>
        <label>Visually Impaired(IN)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visually_Impaired_NIH__c</fullName>
        <label>Visually Impaired(NIH)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Visually_Impaired_V__c</fullName>
        <label>Visually Impaired(V)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Volunteers_Separated__c</fullName>
        <label>Volunteers Separated</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>White__c</fullName>
        <label>White</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Withdraw_Justification__c</fullName>
        <label>Rework Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Your_Recipient_Access_Identifying__c</fullName>
        <label>Your Recipient Access/Identifying #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>no_of_volunteers__c</fullName>
        <label># of Volunteers</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Disaste__c</fullName>
        <label># of add&apos;l activities completed- Disaste</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Econom__c</fullName>
        <label># of add’l activities completed - Econom</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Edu__c</fullName>
        <label># of add’l activities completed - Edu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Enviro__c</fullName>
        <label># of add&apos;l activities completed - Enviro</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Health__c</fullName>
        <label># of add’l activities completed - Health</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_activities_completed_Vetera__c</fullName>
        <label># of add’l activities completed - Vetera</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Disaster_Servi__c</fullName>
        <label># of add’l svcs offered - Disaster Servi</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Economic_Opp__c</fullName>
        <label># of add’l svcs offered- Economic Opp</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Edu__c</fullName>
        <label># of add’l svcs offered- Edu</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Enviro_Steward__c</fullName>
        <label># of add’l svcs offered – Enviro Steward</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Healthy_Future__c</fullName>
        <label># of add’l svcs offered - Healthy Future</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_add_l_svcs_offered_Vets_Militar__c</fullName>
        <label># of add’l svcs offered – Vets &amp; Militar</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>of_federal_funds_unobligated_Federal__c</fullName>
        <label>% of federal funds unobligated:Federal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_federal_funds_unobligated__c</fullName>
        <label>% of federal funds unobligated:Recipient</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_funds_expended_to_date_Federal__c</fullName>
        <label>% of funds expended to date : Federal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>of_funds_expended_to_date__c</fullName>
        <label>% of funds expended to date : Recipient</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_share_of_total_expenditures__c</fullName>
        <label>% of share of total expenditures:Recipie</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>of_share_of_total_expenditures_federal__c</fullName>
        <label>% of share of total expenditures:Federal</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>trained_by_capacity_building_scvs__c</fullName>
        <inlineHelpText># of staff &amp; volunteers trained as a result of capacity-building scvs</inlineHelpText>
        <label># trained by capacity-building scvs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Award Reporting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Award__c</columns>
        <columns>Organization_Name__c</columns>
        <columns>Reporting_Period__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>My_Award_Reports</fullName>
        <columns>Submitted_Date__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Status__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>Organization_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>My Award Reports</label>
    </listViews>
    <listViews>
        <fullName>Returned_for_Rework</fullName>
        <columns>NAME</columns>
        <columns>Award__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Returned for Re-work</value>
        </filters>
        <label>Returned for Rework</label>
    </listViews>
    <nameField>
        <displayFormat>Award Reporting-{000}</displayFormat>
        <label>Award Reporting Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Award Reporting</pluralLabel>
    <recordTypes>
        <fullName>Equipment_Inventory</fullName>
        <active>true</active>
        <description>Equipment Inventory</description>
        <label>Equipment Inventory</label>
    </recordTypes>
    <recordTypes>
        <fullName>FGP_FGPF_Progress_Report_Supplement</fullName>
        <active>true</active>
        <label>FGP/FGPF Progress Report Supplement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Federal_Financial_Reports</fullName>
        <active>true</active>
        <label>Federal Financial Reports</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inventory_of_Unused_or_Residual_Supplies</fullName>
        <active>true</active>
        <description>Inventory of Unused or Residual Supplies</description>
        <label>Inventory of Unused or Residual Supplies</label>
    </recordTypes>
    <recordTypes>
        <fullName>Progress_Reports</fullName>
        <active>true</active>
        <label>Progress Reports</label>
    </recordTypes>
    <recordTypes>
        <fullName>RSVP_Progress_Report_Supplement</fullName>
        <active>true</active>
        <label>RSVP Progress Report Supplement</label>
    </recordTypes>
    <recordTypes>
        <fullName>Senior_Corps_Progress_Report_Supplements</fullName>
        <active>true</active>
        <label>Senior Corps Progress Report Supplements</label>
    </recordTypes>
    <recordTypes>
        <fullName>Subgrantee_Certification</fullName>
        <active>true</active>
        <label>Subgrantee Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>VISTA_Progress_Report_Supplements</fullName>
        <active>true</active>
        <label>VISTA Progress Report Supplements</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>